add [dark mode]

--- a/packages/web/app/globals.css
+++ b/packages/web/app/globals.css
@@ -26,8 +26,8 @@ body {
         --accent: var(--hue) 80% 90%;
         --border: var(--hue) 44% 81%;
         
-        --muted: 111 12% 92%;
-        --muted-foreground: 0 0% 56%;
+        --muted: var(--hue) 12% 92%;
+        --muted-foreground: var(--hue) 0% 56%;
         
         --destructive: 0 96% 39%;
         --destructive-foreground: 0 61% 93%;
@@ -46,6 +46,46 @@ body {
         --complimentary: calc(var(--hue) + 30) 64% 90%;
         --adjacent: calc(var(--hue) + 90) 64% 90%;
         --complimentary-foreground: calc(var(--hue) + 30) 45% 35%;
+
+        --sidebar-width: 12rem;
+        --sidebar-width-collapsed: 4rem;
+      }
+
+      .dark {
+        --hue: 111;
+        
+        --background: var(--hue) 0% 0%;
+        --foreground: var(--hue) 52% 88%;
+        
+        --primary: var(--hue) 24% 13%;
+        --primary-foreground: var(--hue) 52% 88%;
+        
+        --secondary: var(--hue) 42% 16%;
+        --secondary-foreground: var(--hue) 51% 82%;
+        
+        --accent: var(--hue) 42% 34%;
+        --border: var(--hue) 28% 15%;
+        
+        --muted: var(--hue) 5% 32%;
+        --muted-foreground: var(--hue) 5% 56%;
+        
+        --destructive: 0 96% 39%;
+        --destructive-foreground: 0 61% 93%;
+
+        --card: var(--hue) 70% 10%;
+        --card-foreground: var(--hue) 52% 88%;
+  
+        --popover: var(--hue) 29% 39%;
+        --popover-foreground: var(--hue) 52% 88%;
+        
+        --input: var(--hue) 58% 15%;
+        --ring: var(--hue) 28% 15%;
+        
+        --radius: 0.7rem;
+
+        --complimentary: calc(var(--hue) + 30) 64% 50%;
+        --adjacent: calc(var(--hue) + 90) 64% 50%;
+        --complimentary-foreground: calc(var(--hue) + 30) 45% 95%;
 
         --sidebar-width: 12rem;
         --sidebar-width-collapsed: 4rem;
