add [accordion and pixel theme]

--- a/packages/web/app/globals.css
+++ b/packages/web/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap'); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,13 +11,14 @@ html {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'Rubik', serif;
+  /* font-family: 'Rubik', serif; */
+  font-family: 'Pixelify Sans', sans-serif;
 }
 
 
 @layer base {
       :root {
-        --hue: 111;
+        --hue: 0;
         
         --background: var(--hue) 100% 100%;
         --foreground: var(--hue) 45% 37%;
@@ -53,22 +55,25 @@ body {
 
         --sidebar-width: 12rem;
         --sidebar-width-collapsed: 4rem;
+
+        --pixel-size: 2px;
+        --pixel-shadow-offset: 4px;
       }
 
       .dark {
         --hue: 111;
         
         --background: var(--hue) 0% 0%;
-        --foreground: var(--hue) 52% 88%;
+        --foreground: var(--hue) 52% 98%;
         
         --primary: var(--hue) 24% 13%;
-        --primary-foreground: var(--hue) 52% 88%;
+        --primary-foreground: var(--hue) 52% 98%;
         
         --secondary: var(--hue) 42% 16%;
-        --secondary-foreground: var(--hue) 51% 82%;
+        --secondary-foreground: var(--hue) 51% 92%;
         
         --accent: var(--hue) 42% 34%;
-        --border: var(--hue) 28% 15%;
+        --border: var(--hue) 38% 85%;
         
         --muted: var(--hue) 5% 32%;
         --muted-foreground: var(--hue) 5% 56%;
@@ -77,10 +82,10 @@ body {
         --destructive-foreground: 0 61% 93%;
 
         --card: var(--hue) 70% 10%;
-        --card-foreground: var(--hue) 52% 88%;
+        --card-foreground: var(--hue) 52% 98%;
   
         --popover: var(--hue) 29% 39%;
-        --popover-foreground: var(--hue) 52% 88%;
+        --popover-foreground: var(--hue) 52% 98%;
         
         --input: var(--hue) 58% 15%;
         --ring: var(--hue) 28% 15%;
@@ -93,6 +98,55 @@ body {
 
         --sidebar-width: 12rem;
         --sidebar-width-collapsed: 4rem;
+
+        --pixel-size: 2px;
+        --pixel-shadow-offset: 2px;
+      }
+
+      .theme-pixel {
+        --radius: 0px;
+    
+        .rounded-sm {
+          --pixel-shadow-offset: 2px;
+        }
+    
+        .rounded-md {
+          --pixel-shadow-offset: 3px;
+        }
+    
+        .rounded-lg {
+          --pixel-shadow-offset: 4px;
+        }
+    
+        .rounded-xl {
+          --pixel-shadow-offset: 6px;
+        }
+    
+        .rounded-2xl {
+          --pixel-shadow-offset: 8px;
+        }
+    
+        *[class*='rounded'] {
+          z-index: 1;
+          border-radius: 0px;
+          border: none !important;
+          box-shadow: 
+            var(--pixel-shadow-offset) var(--pixel-shadow-offset) 0 0 hsl(var(--border));
+          outline: 1px solid hsl(var(--border));
+          /* outline-offset: -1px; */
+        }
+
+        .pixel-no-border {
+          border: none !important;
+          box-shadow: none !important;
+          outline: none !important;
+        }
+
+        button[class*='rounded']:hover {
+          transform: translate(calc(var(--pixel-shadow-offset)*-1), calc(var(--pixel-shadow-offset)*-1));
+          box-shadow: 
+            calc(var(--pixel-shadow-offset)*2) calc(var(--pixel-shadow-offset)*2) 0 0 hsl(var(--border));
+        }
       }
     }
 
